# seller-segmentation-meli

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: cd.yml  ci.yml
data/: cluster_profiles.md
notebooks/: 01_business_understanding.ipynb  02_data_understanding.ipynb  03_data_preparation.ipynb  04_modeling_clustering.ipynb  05_evaluation.ipynb  06_genai_extension.ipynb
reports/: 01_business_understanding.html  02_data_understanding.html  03_data_preparation.html  04_modeling_clustering.html  05_evaluation.html  06_genai_extension.html  presentacion.html
scripts/: download_data.py  validate_notebooks.py
src/seller_segmentation/: __init__.py
src/seller_segmentation/data/: __init__.py  loader.py  preprocessor.py
src/seller_segmentation/features/: __init__.py  builder.py
src/seller_segmentation/models/: __init__.py  clustering.py  genai_extension.py
src/seller_segmentation/viz/: __init__.py  charts.py
tests/: test_clustering.py  test_features.py  test_preprocessor.py
