[project]
name = "seller-segmentation"
version = "0.1.0"
description = "Seller clustering and commercial strategy generation for MercadoLibre"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2",
    "numpy>=1.26",
    "scikit-learn>=1.4",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "jupyter>=1.0",
    "ipykernel>=6.29",
    "gdown>=5.1",
    "requests>=2.31",
    "tqdm>=4.66",
    "python-dotenv>=1.0",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "anthropic>=0.30",
    "langchain>=0.3",
    "langchain-anthropic>=0.3",
    "langchain-core>=0.3",
    "sentence-transformers>=3.0",
    "kneed>=0.8",
    "yellowbrick>=1.5",
    "joblib>=1.3",
]

[dependency-groups]
dev = [
    "ruff>=0.4",
    "mypy>=1.9",
    "pytest>=8.1",
    "pytest-cov>=5.0",
    "nbformat>=5.9",
    "nbconvert>=7.16",
    "pre-commit>=3.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/seller_segmentation"]

[tool.ruff]
line-length = 100
src = ["src"]
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "ANN", "B", "SIM"]
ignore = ["ANN101", "ANN102", "ANN204"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ANN"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "--cov=seller_segmentation --cov-report=term-missing --cov-fail-under=40"
